<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="weatherDta"
            type="com.code.challenge.uxcam.weatherupdate.data.model.WeatherResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_for_actual_balance_accrued_interest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/guideline_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_actual_tem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.10"
                android:textAppearance="@style/textStyleSubtitle2SemiBold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="22" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_actual_balance_decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="20dp"
                android:text="@string/degree_celsius"
                android:textAppearance="@style/textStyleSubtitleSemiBold"
                app:layout_constraintStart_toEndOf="@+id/tv_actual_tem"
                app:layout_constraintTop_toTopOf="@+id/tv_actual_tem"
                tools:text="@string/degree_celsius" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_air_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textAppearance="@style/textStyleSubtitleSemiBold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_actual_tem"
                tools:text="Haze" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_air_quality_index_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/schedule_in_active_drawable"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:paddingRight="10dp"
                android:paddingBottom="3dp"
                android:textAppearance="@style/textStyleOverline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_air_quality"
                tools:text="AQI 166" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:padding="5dp"
                android:text="More Details >"
                android:textAppearance="@style/textStyleOverlineSemiWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="More Details>" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:background="@drawable/schedule_in_active_drawable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_top">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_sun_set"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_sun_set_icon" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_sun_rise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textStyleOverlineSemiWhite"
                app:layout_constraintStart_toEndOf="@+id/tv_label_feel_like"
                app:layout_constraintTop_toBottomOf="@+id/img_sun_set"
                tools:text="Sunrise 06:75" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_feel_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/real_feel"
                android:textAppearance="@style/textStyleOverlineSemiWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sun_rise" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_feel_like_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textAppearance="@style/textStyleRegularOverline"
                app:layout_constraintStart_toStartOf="@+id/tv_label_feel_like"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_feel_like"
                tools:text="23.5" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_sun_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textAppearance="@style/textStyleOverlineSemiWhite"
                app:layout_constraintStart_toEndOf="@+id/tv_label_humidity"
                app:layout_constraintTop_toBottomOf="@+id/img_sun_set"
                tools:text="Sunset 17:4" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/humidity"
                android:textAppearance="@style/textStyleOverlineSemiWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_label_feel_like"
                app:layout_constraintTop_toBottomOf="@+id/tv_sun_set" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textAppearance="@style/textStyleRegularOverline"
                app:layout_constraintStart_toStartOf="@+id/tv_label_humidity"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_humidity"
                tools:text="17%" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_chances_of_rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/temperature_min"
                android:textAppearance="@style/textStyleOverlineSemiWhite"
                app:layout_constraintStart_toStartOf="@+id/tv_label_feel_like"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_feel_like_value" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_chances_of_rain_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="N/A"
                android:textAppearance="@style/textStyleRegularOverline"
                app:layout_constraintStart_toStartOf="@+id/tv_label_chances_of_rain"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_chances_of_rain"
                tools:text="5%" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pressure"
                android:textAppearance="@style/textStyleOverlineSemiWhite"
                app:layout_constraintStart_toStartOf="@+id/tv_label_humidity"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_humidity_value" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_pressure_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textAppearance="@style/textStyleRegularOverline"
                app:layout_constraintStart_toStartOf="@+id/tv_label_pressure"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_pressure"
                tools:text="1014mbar" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/wind_speen"
                android:textAppearance="@style/textStyleOverlineSemiWhite"
                app:layout_constraintStart_toStartOf="@+id/tv_label_feel_like"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_chances_of_rain_value" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_wind_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textAppearance="@style/textStyleRegularOverline"
                app:layout_constraintStart_toStartOf="@+id/tv_label_wind_speed"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_wind_speed"
                tools:text="7.7km/h" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_uv_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/temperature_max"
                android:textAppearance="@style/textStyleOverlineSemiWhite"
                app:layout_constraintStart_toStartOf="@+id/tv_label_pressure"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_pressure_value" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_uv_index_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textAppearance="@style/textStyleRegularOverline"
                app:layout_constraintStart_toStartOf="@+id/tv_label_uv_index"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_uv_index"
                tools:text="4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>